--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,9 @@ html {
 }
 
 .bg-base {
-  background-color: #1a2634 !important;
+  background-image: url('https://i.ibb.co/TPt4hL3/maxresdefault.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 #backtotop {
