--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ html {
 }
 
 .bg-base {
-  background-image: url('https://i.ibb.co/TPt4hL3/maxresdefault.jpg');
+  background-image: url('https://i.ibb.co/ZgZ6Dyr/peakpx.jpg');
   background-size: cover;
   background-repeat: no-repeat;
 }
